fix(templates): update project templates to use unified acton crate
Update all generated project templates to use the new unified `acton`
crate instead of `acton-htmx`:

- Change dependency from `acton-htmx = "1.0.0-beta.7"` to
  `acton = "1.0.0-beta.8"` in generated Cargo.toml
- Update all `use acton_htmx::` imports to `use acton::`
- Update CLI commands in documentation from `acton-htmx` to `acton htmx`
- Update product name references to "Acton HTMX"
- Keep repository URL as govcraft/acton-htmx

This ensures newly scaffolded projects use the correct unified crate
structure.

--- a/templates/project/common/src/handlers/home.rs.hbs
+++ b/templates/project/common/src/handlers/home.rs.hbs
@@ -1,6 +1,6 @@
 //! Home page handler
 
-use acton_htmx::prelude::*;
+use acton::prelude::*;
 use askama::Template;
 use axum::response::Html;
 
@@ -8,7 +8,7 @@ use axum::response::Html;
 #[template(path = "home.html")]
 pub struct HomeTemplate {
     pub user_id: Option<i64>,
-    pub flash_messages: Vec<acton_htmx::auth::FlashMessage>,
+    pub flash_messages: Vec<acton::auth::FlashMessage>,
 }
 
 /// GET / - Home page
