--- a/templates/project/common/templates/home.html.hbs
+++ b/templates/project/common/templates/home.html.hbs
@@ -23,7 +23,7 @@
     <h2>Documentation</h2>
     <ul>
         <li><a href="https://htmx.org" target="_blank">HTMX Documentation</a></li>
-        <li><a href="https://github.com/govcraft/acton-htmx" target="_blank">acton-htmx Repository</a></li>
+        <li><a href="https://github.com/govcraft/acton-htmx" target="_blank">Acton HTMX Repository</a></li>
     </ul>
 </div>
 {%- endblock %}
