fix(templates): update project templates to use unified acton crate
Update all project and scaffold templates to reference the newly
published acton-dx crate instead of the old acton naming.

--- a/templates/project/common/src/handlers/home.rs.hbs
+++ b/templates/project/common/src/handlers/home.rs.hbs
@@ -1,6 +1,6 @@
 //! Home page handler
 
-use acton::prelude::*;
+use acton_dx::prelude::*;
 use askama::Template;
 use axum::response::Html;
 
@@ -8,7 +8,7 @@ use axum::response::Html;
 #[template(path = "home.html")]
 pub struct HomeTemplate {
     pub user_id: Option<i64>,
-    pub flash_messages: Vec<acton::auth::FlashMessage>,
+    pub flash_messages: Vec<acton_dx::auth::FlashMessage>,
 }
 
 /// GET / - Home page
