--- a/templates/project/sqlite/Cargo.toml.hbs
+++ b/templates/project/sqlite/Cargo.toml.hbs
@@ -5,9 +5,9 @@ edition = "2021"
 rust-version = "1.75"
 
 [dependencies]
-# acton re-exports: tokio, axum, tower, tower-http, tracing, tracing-subscriber,
+# acton-dx re-exports: tokio, axum, tower, tower-http, tracing, tracing-subscriber,
 # serde, serde_json, sqlx, askama, validator, anyhow, thiserror, acton-reactive
-acton = { version = "1.0.0-beta.8", default-features = false, features = ["sqlite"] }
+acton-dx = { version = "1.0.0-beta.8", default-features = false, features = ["sqlite"] }
 
 [dev-dependencies]
 http-body-util = "0.1"
