--- a/templates/project/postgres/README.md.hbs
+++ b/templates/project/postgres/README.md.hbs
@@ -1,6 +1,6 @@
 # {{project_name}}
 
-A web application built with [Acton HTMX](https://github.com/govcraft/acton-htmx), an opinionated Rust framework for server-rendered HTMX applications.
+A web application built with [Acton DX](https://github.com/govcraft/acton-dx), an opinionated Rust framework for server-rendered HTMX applications.
 
 ## Quick Start
 
@@ -8,7 +8,7 @@ A web application built with [Acton HTMX](https://github.com/govcraft/acton-htmx
 
 - Rust 1.75 or later
 - PostgreSQL
-- Acton CLI: `cargo install acton`
+- Acton DX CLI: `cargo install acton-dx`
 
 ### Setup
 
@@ -19,12 +19,12 @@ A web application built with [Acton HTMX](https://github.com/govcraft/acton-htmx
 
 2. Run migrations:
    ```bash
-   acton htmx db migrate
+   acton-dx htmx db migrate
    ```
 
 3. Start development server:
    ```bash
-   acton htmx dev
+   acton-dx htmx dev
    ```
 
 4. Open http://localhost:3000
@@ -65,13 +65,13 @@ cargo test
 
 ```bash
 # Run migrations
-acton htmx db migrate
+acton-dx htmx db migrate
 
 # Reset database
-acton htmx db reset
+acton-dx htmx db reset
 
 # Create new migration
-acton htmx db create <name>
+acton-dx htmx db create <name>
 ```
 
 ### Building for Production
