--- a/templates/project/common/templates/layouts/app.html.hbs
+++ b/templates/project/common/templates/layouts/app.html.hbs
@@ -2,7 +2,18 @@
 
 {%- block body %}
 <div class="container">
-    {%- include "partials/nav.html" %}
+    <nav>
+        <a href="/">Home</a>
+        {%- if user_id.is_some() %}
+        <span class="nav-user">Logged in</span>
+        <form action="/logout" method="post" style="display:inline;">
+            <button type="submit" class="nav-logout">Logout</button>
+        </form>
+        {%- else %}
+        <a href="/login">Login</a>
+        <a href="/register">Register</a>
+        {%- endif %}
+    </nav>
 
     <div id="flash-messages">
         {%- include "partials/flash.html" %}
