--- a/templates/project/common/templates/auth/login.html.hbs
+++ b/templates/project/common/templates/auth/login.html.hbs
@@ -10,7 +10,7 @@
     <div class="error">{{ error }}</div>
     {%- endif %}
 
-    <form hx-post="/login" hx-target="body">
+    <form hx-post="/login" hx-target="#flash-messages" hx-swap="innerHTML">
         <div class="field">
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
