--- a/templates/project/postgres/Cargo.toml.hbs
+++ b/templates/project/postgres/Cargo.toml.hbs
@@ -16,6 +16,9 @@ sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
 # tower-http for serving static files
 tower-http = { version = "0.6", features = ["fs", "trace"] }
 
+# axum-htmx for HTMX-aware responses
+axum-htmx = "0.8"
+
 # Tracing with env filter support
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
